# DuoAPI_Interaction

./: .env.example  .gitignore  CLAUDE.md  DELETION_REPORT.md  PROJECT_SUMMARY.md  README.md  config.example.yaml  main.py  pyproject.toml
.claude/: action_state.json  agent_summary_issue_10.md  agent_summary_issue_9.md  github_monitor_state.json  settings.local.json
.claude/docs/: windows-secret-management.md
.claude/docs/DuoAPIdocs/: api-overview.md  getting-api-credentials.md  student-cleanup-guide.md
.github/workflows/: ci.yml  codeql.yml
docs/: SILENT_EXECUTION.md
scripts/: agent_executor.py  autonomous_action.py  claude_work_trigger.md  duo_api_with_retry.py  duo_cleanup_env.py  duo_student_cleanup.py  email_notifier.py  fix_vbs_popups.ps1  github_monitor.py  run_action_silent.vbs  run_action_silent_safe.vbs  run_monitor_silent.vbs  run_monitor_silent_safe.vbs  setup_github_monitor.ps1  update_tasks_to_silent.ps1  web_dashboard.py
tests/: test_duo_api.py
